On pagenetgame, when window is too small the map/game options becomes a tabbed interface to allow for a few lines of chat to always be visible. Restored HWForm's min height to 580. Fixed the 2px alignment issue with the map list and map previews' top edges that unC0Rr was whining about. <3

--- a/QTfrontend/res/css/qt.css
+++ b/QTfrontend/res/css/qt.css
@@ -44,7 +44,7 @@ border: solid; border-width: 3px; border-color: #ffcc00;
 QPushButton, QListWidget, QListView, QTableView, QLineEdit, QHeaderView,
 QTextBrowser, QSpinBox, QToolBox, QComboBox, QPlainTextEdit,
 QComboBox QAbstractItemView, IconedGroupBox,
-.QGroupBox, GameCFGWidget, TeamSelWidget, SelWeaponWidget,
+.QGroupBox, #gameStackContainer, TeamSelWidget, SelWeaponWidget,
 QTabWidget::pane, QTabBar::tab, #mapPreview, #labelLikeLineEdit {
 border: solid;
 border-width: 3px;
@@ -79,7 +79,7 @@ background-color: #0d0544;
 
 QLineEdit, QLabel, QHeaderView, QListWidget, QListView, QTableView,
 QSpinBox, QToolBox::tab, QComboBox, QComboBox QAbstractItemView,
-IconedGroupBox, .QGroupBox, GameCFGWidget, TeamSelWidget,
+IconedGroupBox, .QGroupBox, #gameStackContainer, TeamSelWidget,
 SelWeaponWidget, QCheckBox, QRadioButton, QPushButton, QPlainTextEdit {
 font: bold 13px;
 }
@@ -88,7 +88,7 @@ background-position: bottom center;
 background-repeat: repeat-x;
 background-color: #000000;
 }
-.QGroupBox,GameCFGWidget,TeamSelWidget,SelWeaponWidget {
+.QGroupBox, #gameStackContainer, TeamSelWidget, SelWeaponWidget {
 background-position: bottom center;
 background-repeat: repeat-x;
 border-radius: 16px;
@@ -106,12 +106,16 @@ background-color: #130f2c;
 }
 
 QTabWidget::pane {
-border-bottom-left-radius: 8px;
-border-bottom-right-radius: 8px;
+border-radius: 8px;
+border-top-left-radius: 0px;
 }
 
 QLineEdit:disabled, QSpinBox:disabled {
 border-color: gray;
+}
+
+GameCFGWidget {
+border: none;
 }
 
 QPushButton {
@@ -313,4 +317,13 @@ background-color: #150A61;
 
 QDialogButtonBox QPushButton {
 padding: 3px 5px;
+}
+
+#gameCfgWidgetTabs {
+border-radius: 16px;
+border-top-left-radius: 0px;
+}
+
+TeamSelWidget, #gameStackContainer, #GBoxOptions {
+border-radius: 10px;
 }
